--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.0",
+        "@trevoreyre/autocomplete-vue": "^2.1.1",
         "laravel-vue-pagination": "^2.3.1",
         "sweetalert2": "^9.7.0",
         "vee-validate": "^3.2.1",
