--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=abbb7f3070eaee90054e",
+    "/css/app.css": "/css/app.css?id=bef2a5bcef85e15fe605"
 }
