--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.0",
-        "@trevoreyre/autocomplete-vue": "^2.1.1",
         "laravel-vue-pagination": "^2.3.1",
         "sweetalert2": "^9.7.0",
         "vee-validate": "^3.2.1",
         "vue": "^2.5.17",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.0.7",
+        "vue-select": "^3.10.3",
+        "vue2-datepicker": "^3.5.0",
         "vuedraggable": "^2.23.2",
         "vuex-persistedstate": "^2.7.0"
     }
