--- a/Client/package.json
+++ b/Client/package.json
@@ -19,7 +19,8 @@
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
-        "sass-loader": "7.*",
+        "sass-loader": "^7.*",
+        "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
@@ -27,9 +28,9 @@
         "laravel-vue-pagination": "^2.3.1",
         "sweetalert2": "^9.7.0",
         "vee-validate": "^3.2.1",
-        "vue": "^2.5.17",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.0.7",
+        "vuex": "^3.1.2",
         "vue-select": "^3.10.3",
         "vue2-datepicker": "^3.5.0",
         "vuedraggable": "^2.23.2",
