--- a/Client/package.json
+++ b/Client/package.json
@@ -11,29 +11,32 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.5.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.26.5",
         "sass-loader": "^7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.0",
+        "@riophae/vue-treeselect": "^0.4.0",
+        "admin-lte": "^3.0.2",
         "laravel-vue-pagination": "^2.3.1",
-        "sweetalert2": "^9.7.0",
+        "overlayscrollbars": "^1.12.0",
+        "sweetalert2": "^9.11.0",
         "vee-validate": "^3.2.1",
         "vue-multiselect": "^2.1.6",
-        "vue-router": "^3.0.7",
-        "vuex": "^3.1.2",
+        "vue-router": "^3.2.0",
         "vue-select": "^3.10.3",
         "vue2-datepicker": "^3.5.0",
         "vuedraggable": "^2.23.2",
+        "vuex": "^3.1.2",
         "vuex-persistedstate": "^2.7.0"
     }
 }
