Mapbox api with booking form

--- a/Client/package.json
+++ b/Client/package.json
@@ -15,7 +15,7 @@
         "cross-env": "^5.1",
         "jquery": "^3.5.1",
         "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.15",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.26.5",
@@ -28,7 +28,10 @@
         "@riophae/vue-treeselect": "^0.4.0",
         "admin-lte": "^3.0.2",
         "laravel-vue-pagination": "^2.3.1",
+        "mapbox-gl": "^1.10.1",
+        "mapbox-gl-vue": "^2.0.4",
         "overlayscrollbars": "^1.12.0",
+        "qs": "^6.9.4",
         "sweetalert2": "^9.11.0",
         "vee-validate": "^3.2.1",
         "vue-multiselect": "^2.1.6",
