--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "laravel-vue-pagination": "^2.3.1",
         "mapbox-gl": "^1.10.1",
         "mapbox-gl-vue": "^2.0.4",
+        "moment": "^2.27.0",
         "overlayscrollbars": "^1.12.0",
         "qs": "^6.9.4",
         "sweetalert2": "^9.11.0",
