--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
         "@fortawesome/fontawesome-free": "^5.12.0",
         "@riophae/vue-treeselect": "^0.4.0",
         "admin-lte": "^3.0.2",
+        "laravel-echo": "^1.8.1",
         "laravel-vue-pagination": "^2.3.1",
         "mapbox-gl": "^1.10.1",
         "mapbox-gl-vue": "^2.0.4",
         "moment": "^2.27.0",
         "overlayscrollbars": "^1.12.0",
+        "pusher-js": "^7.0.0",
         "qs": "^6.9.4",
         "sweetalert2": "^9.11.0",
         "vee-validate": "^3.2.1",
