--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,54 @@
-APP_NAME=Laravel
+APP_NAME="UK Airport Taxi"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:EwN+qdT1hkBeac2mFOX8/xlz0sml44AIG6ws3fX5VdQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://www.uk-airporttaxi.com/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=airporttaxi
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u810078261_basicdatabase
+DB_USERNAME=u810078261_basicname
+DB_PASSWORD=p2ZMmYr@
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=35791394
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+# MAIL_DRIVER=smtp
+# MAIL_HOST=smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=ab87c617e56552
+# MAIL_PASSWORD=d53985dcfb7c97
+# MAIL_ENCRYPTION=null
+
+MAIL_FROM_ADDRESS=from@example.com
 MAIL_FROM_NAME="${APP_NAME}"
+
+# Hostinger Mail Config
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.hostinger.com
+MAIL_PORT=587
+MAIL_USERNAME=noreply@uk-airporttaxi.com
+MAIL_PASSWORD=123123aA
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1057284
+PUSHER_APP_KEY=0148c4c6bc3a07a89629
+PUSHER_APP_SECRET=dd8f72cd57205c0b4424
 PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
