Jobs, Queue, Car pics, Icon

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ REDIS_PORT=6379
 # MAIL_PASSWORD=d53985dcfb7c97
 # MAIL_ENCRYPTION=null
 
-MAIL_FROM_ADDRESS=from@example.com
+MAIL_FROM_ADDRESS=noreply@uk-airporttaxi.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 # Hostinger Mail Config
