unused codes cleaned

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=u810078261_basicdatabase
 DB_USERNAME=u810078261_basicname
-DB_PASSWORD=p2ZMmYr@
+DB_PASSWORD=MnijwPVuC~8
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
