--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "mapbox-gl-vue": "^2.0.4",
         "moment": "^2.27.0",
         "overlayscrollbars": "^1.12.0",
+        "postcode": "^5.0.0",
         "pusher-js": "^7.0.0",
         "qs": "^6.9.4",
         "sweetalert2": "^9.11.0",
