Flat picker confirm button

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:EwN+qdT1hkBeac2mFOX8/xlz0sml44AIG6ws3fX5VdQ=
 APP_DEBUG=true
 APP_URL=http://www.uk-airporttaxi.com/
-
+DEBUGBAR_ENABLED = FALSE
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
