--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ APP_ENV=local
 APP_KEY=base64:EwN+qdT1hkBeac2mFOX8/xlz0sml44AIG6ws3fX5VdQ=
 APP_DEBUG=true
 APP_URL=http://www.uk-airporttaxi.com/
+
+ADMIN_APP_URL=http://127.0.0.1:900/
+MIX_ADMIN_APP_URL="${ADMIN_APP_URL}"
+
 DEBUGBAR_ENABLED = FALSE
 LOG_CHANNEL=stack
 
