--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "pusher/pusher-php-server": "~4.0",
+        "stripe/stripe-php": "^7.69",
         "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
