--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "pusher-js": "^7.0.0",
         "qs": "^6.9.4",
         "sweetalert2": "^9.11.0",
+        "swiper": "^6.4.15",
         "vee-validate": "^3.2.1",
+        "vue-awesome-swiper": "^4.1.1",
         "vue-flatpickr-component": "^8.1.6",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.2.0",
